--- a/slide.css
+++ b/slide.css
@@ -9,7 +9,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: aquamarine;
+    background: rgb(127, 140, 255);
 
 }
 
